# KOMPOSOS-silicon

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE-APACHE  LICENSE-COMMERCIAL  MEMORY.md  README.md  requirements.txt
bridges/: README.md  infinity_cosmos_plugin.py  telemetry_plugin.py
categorical/: gray_category.py  kan_extensions.py
core/: category.py  evidence_classification.py  evidence_tiers.py  executable_synthesis.py  generator.py  generator_server.py  harness.py  honesty_gate.py  host.py  loop.py  plugin_generator.py  scoreboard.py  synthesis.py
data/: __init__.py  embeddings.py  store.py
docs/: HANDOFF.md  ROADMAP.md  SESSIONS.md  SILICON_FINDINGS.md  SILICON_MATH_INVENTORY.md  SILICON_MATH_TOOLBOX.md  SILICON_PLAN.md  SILICON_POSTMOORE_PLAN.md  VALUE.md  (+4 more)
operadum/: CLAUDE.md  PRONOIA_PREDICTION_STACK.md  README.md  TEKTON_MASTER_SPEC.md  operadum_decision_AML_portfolio.md  pyproject.toml
operadum/docs/: ARCHITECTURE.md  PRONOIA_README.md
operadum/domain_core/: __init__.py
operadum/examples/: coherence_demo.py  daedalus_demo.py  design_showcase.py  domain_roundtrip_demo.py  drug_world_model_demo.py  figure_profiles_demo.py  forge_agent_demo.py  full_showcase.py  komposos_integration_demo.py  pipeline_demo.py  real_drug_batch_rank_demo.py  real_drug_world_model_demo.py  self_construction_demo.py
operadum/examples/pronoia/: __init__.py  honesty_mdl_demo.py  mdl_ranker_demo.py  pharm_prediction_loop_demo.py  scm_demo.py  sheaf_on_pharm_graph.py  sheaf_probe_demo.py  tsetlin_demo.py  vsa_demo.py
operadum/pronoia/: __init__.py  domain_adapter.py
(+154 files in other folders)
