[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "operadum"
version = "0.1.0"
description = "OPERADUM: A categorical design engine with PRONOIA prediction contracts"
readme = "README.md"
license = {text = "LicenseRef-Proprietary-Commercial"}
requires-python = ">=3.10"
authors = [
    {name = "James Ray Hawkins", email = "jhawk314@gmail.com"}
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
include = ["domain_core*", "operadum*", "pronoia*"]

[tool.pytest.ini_options]
testpaths = ["operadum/tests", "tests"]